--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
 {
+  "name": "mern_stack_blog_app",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "flowbite-react": "^0.9.0",
-    "react-icons": "^5.2.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.3.3",
+    "nodemon": "^3.1.0"
   }
 }
